Add note about Inception

--- a/docs/man/man1/jsonstatsd.1
+++ b/docs/man/man1/jsonstatsd.1
@@ -126,7 +126,7 @@ There are several other tools which can do this for you as well\&. Search for \f
 \fB/etc/sysconfig/jsonstatsd\fR \(em jsonstatsd configuration file
 .SH "AUTHOR"
 .sp
-jsonstatsd was written by Red Hat, Inc\&.\&.
+jsonstatsd was written by the \fBInception\fR team at Red Hat, Inc\&.\&.
 .sp
 This man page was written by Tim Bielawa <tbielawa@redhat\&.com>\&.
 .SH "COPYRIGHT"
