Reference to README.md

--- a/docs/man/man1/jsonstatsd.1
+++ b/docs/man/man1/jsonstatsd.1
@@ -138,6 +138,8 @@ jsonstats is released under the terms of the MIT License\&.
 .sp
 \fBjson_reformat\fR(1), from the \fByajl\fR package
 .sp
-Introducing JSON: http://www\&.json\&.org/
+\fB/usr/share/doc/jsonstats\-*/README\&.md\fR \- For a complete list of requirements and plugin writing docs
 .sp
-The jsonstats Homepage: https://github\&.com/RHInception/jsonstats/
+\fBIntroducing JSON\fR: http://www\&.json\&.org/
+.sp
+\fBThe jsonstats Homepage\fR: https://github\&.com/RHInception/jsonstats/
